1.20.1 port part 2
- Improved custom tick rate implementation
- Fixed forge not building and running properly